added a healthcheck module with a simple controller for disk and db
